--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en" id="html">
 
 <head>
+    <meta name="google-site-verification" content="l9qNtMpSJDT309LLZnI4pKjJDDRnTskb2DBNC3zNUvY" />
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Meta Security - Page Appeal</title>
